5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1715_3060.log
== TEST (2019-05-02 16:26:23) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

if d1>0 or d1<6 or d2>0 or d2<6
elif d1+d2=12:
	print("CONSTRICAO")
	CONTRICAO=d1+d2+1
	print(CONTRICAO)
	
elif d1+d2<5:
	print("POLEN")
	POLEN=(d1+d2+1)*r
	print(POLEN)
	
elif d1+d2>5 and d1+d2=11:
	print("FRAQUEZA")
	FRAQUEZA=(d1*d2)
	print(FRAQUEZA)
	
else:
	print("Entrada invalida")
	
-- ERROR:
File "XXXX", line 5
    if d1>0 or d1<6 or d2>0 or d2<6
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:26:50) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

if d1>0 and d1<6 and d2>0 and d2<6
elif d1+d2=12:
	print("CONSTRICAO")
	CONTRICAO=d1+d2+1
	print(CONTRICAO)
	
elif d1+d2<5:
	print("POLEN")
	POLEN=(d1+d2+1)*r
	print(POLEN)
	
elif d1+d2>5 and d1+d2=11:
	print("FRAQUEZA")
	FRAQUEZA=(d1*d2)
	print(FRAQUEZA)
	
else:
	print("Entrada invalida")
	
-- ERROR:
File "XXXX", line 5
    if d1>0 and d1<6 and d2>0 and d2<6
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:17) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

if d1>=0 and d1<6 and d2>=0 and d2<6
elif d1+d2=12:
	print("CONSTRICAO")
	CONTRICAO=d1+d2+1
	print(CONTRICAO)
	
elif d1+d2<5:
	print("POLEN")
	POLEN=(d1+d2+1)*r
	print(POLEN)
	
elif d1+d2>5 and d1+d2=11:
	print("FRAQUEZA")
	FRAQUEZA=(d1*d2)
	print(FRAQUEZA)
	
else:
	print("Entrada invalida")
	
-- ERROR:
File "XXXX", line 5
    if d1>=0 and d1<6 and d2>=0 and d2<6
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:02) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

if d1>=0 and d2>=0
elif d1+d2=12:
	print("CONSTRICAO")
	CONTRICAO=d1+d2+1
	print(CONTRICAO)
	
elif d1+d2<5:
	print("POLEN")
	POLEN=(d1+d2+1)*r
	print(POLEN)
	
elif d1+d2>5 and d1+d2=11:
	print("FRAQUEZA")
	FRAQUEZA=(d1*d2)
	print(FRAQUEZA)
	
else:
	print("Entrada invalida")
	
-- ERROR:
File "XXXX", line 5
    if d1>=0 and d2>=0
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:53) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

if d1<=0 and d1>6
print("Entrada invalida")
	if d2<=0 and d2>6
	print("Entrada invalida")
	elif d1+d2=12:
		print("CONSTRICAO")
		CONTRICAO=d1+d2+1
		print(CONTRICAO)
	
	elif d1+d2<5:
		print("POLEN")
		POLEN=(d1+d2+1)*r
		print(POLEN)
	
	elif d1+d2>5 and d1+d2=11:
		print("FRAQUEZA")
		FRAQUEZA=(d1*d2)
		print(FRAQUEZA)
	

	
-- ERROR:
File "XXXX", line 9
    if d1<=0 and d1>6
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:24) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

if d1<1 and d1>6
print("Entrada invalida")
	if d2<=0 and d2>6
	print("Entrada invalida")
	elif d1+d2=12:
		print("CONSTRICAO")
		CONTRICAO=d1+d2+1
		print(CONTRICAO)
	
	elif d1+d2<5:
		print("POLEN")
		POLEN=(d1+d2+1)*r
		print(POLEN)
	
	elif d1+d2>5 and d1+d2=11:
		print("FRAQUEZA")
		FRAQUEZA=(d1*d2)
		print(FRAQUEZA)
	

	
-- ERROR:
File "XXXX", line 9
    if d1<1 and d1>6
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:36) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

if d1<1 or d1>6
print("Entrada invalida")
	if d2<=0 and d2>6
	print("Entrada invalida")
	elif d1+d2=12:
		print("CONSTRICAO")
		CONTRICAO=d1+d2+1
		print(CONTRICAO)
	
	elif d1+d2<5:
		print("POLEN")
		POLEN=(d1+d2+1)*r
		print(POLEN)
	
	elif d1+d2>5 and d1+d2=11:
		print("FRAQUEZA")
		FRAQUEZA=(d1*d2)
		print(FRAQUEZA)
	

	
-- ERROR:
File "XXXX", line 9
    if d1<1 or d1>6
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:12) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

if d1<1 and d1>6 and d2<1 and d2>6:
	print("Entrada invalida")
elif d1+d2=12:
	print("CONSTRICAO")
	CONTRICAO=d1+d2+1
	print(CONTRICAO)
elif d1+d2<5:
	print("POLEN")
	POLEN=(d1+d2+1)*r
	print(POLEN)
	
elif d1+d2>5 and d1+d2=11:
	print("FRAQUEZA")
	FRAQUEZA=(d1*d2)
	print(FRAQUEZA)
	

	
-- ERROR:
File "XXXX", line 11
    elif d1+d2=12:
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:30) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

if d1<1 and d1>6 and d2<1 and d2>6:
	print("Entrada invalida")
elif d1+d2==12:
	print("CONSTRICAO")
	CONTRICAO=d1+d2+1
	print(CONTRICAO)
elif d1+d2<5:
	print("POLEN")
	POLEN=(d1+d2+1)*r
	print(POLEN)
	
elif d1+d2>5 and d1+d2=11:
	print("FRAQUEZA")
	FRAQUEZA=(d1*d2)
	print(FRAQUEZA)
	

	
-- ERROR:
File "XXXX", line 20
    elif d1+d2>5 and d1+d2=11:
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:07) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

d=d1+d2

if d1<1 and d1>6 and d2<1 and d2>6:
	print("Entrada invalida")
elif d==12:
	print("CONSTRICAO")
	CONTRICAO=d1+d2+1
	print(CONTRICAO)
elif d<5:
	print("POLEN")
	POLEN=(d1+d2+1)*r
	print(POLEN)
	
elif d>5 and d==11:
	print("FRAQUEZA")
	FRAQUEZA=(d1*d2)
	print(FRAQUEZA)
	

	
-- OUTPUT:
5
3
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:39:18) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

d=d1+d2

if d1<1 and d1>6 and d2<1 and d2>6:
	print("Entrada invalida")
elif d==12:
	print("CONSTRICAO")
	CONTRICAO=d1+d2+1
	print(CONTRICAO)
elif d<5:
	print("POLEN")
	POLEN=(d1+d2+1)*r
	print(POLEN)
	
elif d>5 and d==11:
	print("FRAQUEZA")
	FRAQUEZA=(d1*d2)
	print(FRAQUEZA)
	

	
-- EXECUTION TIME:
0.226813
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
5
3
8
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
7
8
5
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
1
1
9
POLEN
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:45) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

d=d1+d2

if d1<1 and d1>6 and d2<1 and d2>6:
	print("Entrada invalida")
elif d==12:
	print("CONSTRICAO")
	CONTRICAO=d1+d2+1
	print(CONTRICAO)
elif d<5:
	print("POLEN")
	POLEN=(d1+d2+1)*r
	print(POLEN)
	
elif d>5 and d==11:
	print("FRAQUEZA")
	FRAQUEZA=(d1*d2)
	print(FRAQUEZA)
	

	
-- OUTPUT:
5
3
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:37) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

d=d1+d2

if d1<1 and d1>6 and d2<1 and d2>6:
	print("Entrada invalida")
elif d==12:
	print("CONSTRICAO")
	CONTRICAO=d1+d2+1
	print(CONTRICAO)
elif d<5:
	print("POLEN")
	POLEN=(d1+d2+1)*r
	print(POLEN)
	
elif d>5 and d==11:
	print("FRAQUEZA")
	FRAQUEZA=(d1*d2)
	print(FRAQUEZA)
	

	
-- OUTPUT:
5
3
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:58) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

d=d1+d2

if d1<1 and d1>6 and d2<1 and d2>6:
	print("Entrada invalida")
elif d==12:
	print("CONSTRICAO")
	CONTRICAO=d1+d2+1
	print(CONTRICAO)
elif d<5:
	print("POLEN")
	POLEN=(d1+d2+1)*r
	print(POLEN)
	
elif d>5 and d==11:
	print("FRAQUEZA")
	FRAQUEZA=(d1*d2)
	print(FRAQUEZA)
	

	
-- OUTPUT:
5
3
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:05) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

d=d1+d2

if d1<1 and d1>6 and d2<1 and d2>6:
	elif d==12:
	print("CONSTRICAO")
	CONTRICAO=d1+d2+1
	print(CONTRICAO)
elif d<5:
	print("POLEN")
	POLEN=(d1+d2+1)*r
	print(POLEN)
	
elif d>5 and d==11:
	print("FRAQUEZA")
	FRAQUEZA=(d1*d2)
	print(FRAQUEZA)
else:
	print("Entrada invalida")
	

	
-- ERROR:
File "XXXX", line 12
    elif d==12:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:13) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

d=d1+d2

if d1<1 and d1>6 and d2<1 and d2>6:
	print ("Entrada invalida")

elif d==12:
	print("CONSTRICAO")
	CONTRICAO=d1+d2+1
	print(CONTRICAO)
	
elif d<5:
	print("POLEN")
	POLEN=(d1+d2+1)*r
	print(POLEN)
	
elif d>5 and d==11:
	print("FRAQUEZA")
	FRAQUEZA=(d1*d2)
	print(FRAQUEZA)
else:
	print("Entrada invalida")
	

	
-- OUTPUT:
5
3
8
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:44:44) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

d=d1+d2

if d1<1 and d1>6 and d2<1 and d2>6:
	print ("Entrada invalida")

elif d==12:
	print("CONSTRICAO")
	CONTRICAO=d1+d2+1
	print(CONTRICAO)
	
elif d<=5:
	print("POLEN")
	POLEN=(d1+d2+1)*r
	print(POLEN)
	
elif d>5 and d==11:
	print("FRAQUEZA")
	FRAQUEZA=(d1*d2)
	print(FRAQUEZA)
else:
	print("Entrada invalida")
	

	
-- EXECUTION TIME:
0.124377
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
5
3
8
Entrada invalida
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
7
8
5
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
1
1
9
POLEN
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:48:05) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

d=d1+d2
CONTRICAO=d1+d2+1
POLEN=(d1+d2+1)*r
FRAQUEZA=d1*d2

if d1<1 and d1>6 and d2<1 and d2>6:
	print ("Entrada invalida")

elif d==12:
	print("CONSTRICAO")
	print(CONTRICAO)
	
elif d<=5:
	print("POLEN")
	print(POLEN)
	
elif d>5 and d==11:
	print("FRAQUEZA")
	print(FRAQUEZA)
else:
	print("Entrada invalida")
	

	
-- OUTPUT:
5
3
8
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:29) 
-- CODE:
d1=int(input("Entre com o valor do dado lancado d1: "))
d2=int(input("Entre com o valor do dado lancado d2: "))
r=int(input("Digite o numero de rodadas?: "))

print(d1)
print(d2)
print(r)

d=d1+d2
CONTRICAO=d1+d2+1
POLEN=(d1+d2+1)*r
FRAQUEZA=d1*d2

if d1<1 and d1>6 and d2<1 and d2>6 and r<0:
	print ("Entrada invalida")

elif d==12:
	print("CONSTRICAO")
	print(CONTRICAO)
	
elif d<=5:
	print("POLEN")
	print(POLEN)
	
elif d>5 and d==11:
	print("FRAQUEZA")
	print(FRAQUEZA)
else:
	print("Entrada invalida")
	

	
-- OUTPUT:
5
3
8
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
